--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,20 @@
 logging:
   file: "logs/config/mike_springboot2.log"
 info:
-  name : "springboot2"
+  name: "springboot2"
 
 server:
   port: 8082
-  #项目名，如果不设定，默认是 /
-  context-path: /apptest
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/test
+    username: root
+    password: jd123456MySQL#
+    driverClassName: com.mysql.jdbc.Driver
+
+jpa:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto : update
