--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,12 @@ info:
 server:
   port: 8082
 
+#Td123456#
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test
     username: root
-    password: jd123456MySQL#
+    password: Td123456#
     driverClassName: com.mysql.jdbc.Driver
 
 jpa:
@@ -18,3 +19,4 @@ jpa:
       hibernate:
         hbm2ddl:
           auto : update
+
